WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211702
[WinCairo][WK1] requestAnimationFrame doesn't work since
r261113
https://bugs.webkit.org/show_bug.cgi?id=211702
Summary
[WinCairo][WK1] requestAnimationFrame doesn't work since r261113
Fujii Hironori
Reported
2020-05-10 13:26:46 PDT
[WinCairo][WK1] requestAnimationFrame doesn't work since
r261113
Since
r261113
(
Bug 204713
), WinCairo WK1 is failing some rAF tests.
https://build.webkit.org/builders/WinCairo%2064-bit%20WKL%20Release%20%28Tests%29/builds/6162
fast/animation/request-animation-frame-iframe.html fast/animation/request-animation-frame-iframe2.html fast/animation/request-animation-frame-prefix.html fast/animation/request-animation-frame-remove-client.html fast/animation/request-animation-frame-remove-iframe-in-callback.html fast/animation/request-animation-frame-timestamps-advance.html fast/animation/request-animation-frame.html
Bug 204713
– Throttling requestAnimationFrame should be controlled by RenderingUpdateScheduler AppleWin WK1 doesn't fail the tests. WinCairo WK2 doesn't fail the tests.
Attachments
Patch
(1.67 KB, patch)
2020-05-10 13:35 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2020-05-10 13:35:18 PDT
Created
attachment 398981
[details]
Patch
EWS
Comment 2
2020-05-10 19:08:40 PDT
Committed
r261463
: <
https://trac.webkit.org/changeset/261463
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 398981
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-05-10 19:09:20 PDT
<
rdar://problem/63072619
>
Fujii Hironori
Comment 4
2020-05-11 14:48:07 PDT
r261463
actually fixed the rAF timeout issue of WinCairo testing bot.
https://build.webkit.org/builders/WinCairo%2064-bit%20WKL%20Release%20%28Tests%29/builds/6245
However, surprisingly, rAF still doesn't work well in WinCairo WK1 MiniBrowser. I will file a new bug.
Fujii Hironori
Comment 5
2020-05-12 13:21:24 PDT
Filed:
Bug 211798
– [WinCairo][WK1] requestAnimationFrame doesn't work since
r244182
in Accelerated Compositing mode
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug