[WinCairo][WK1] requestAnimationFrame doesn't work since r261113 https://bugs.webkit.org/show_bug.cgi?id=211702

Reviewed by Darin Adler.

Since r261113 (Bug 204713), WinCairo WK1 is failing some rAF tests
even though AppleWin isn't.

WinCairo also should do m_page->updateRendering() in
WebView::flushPendingGraphicsLayerChangesSoon as well as AppleWin.

* WebView.cpp:
(WebView::flushPendingGraphicsLayerChangesSoon): Call
updateRendering.


Canonical link: https://commits.webkit.org/224609@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261463 268f45cc-cd09-0410-ab3c-d52691b4dbfc